@@ -3,6 +3,7 @@ Revision history for Lufi
 ?.??.? ????-??-??
 	- Notifications when uploading and downloading files (#181)
 	- Use Weblate instead of Zanata for translations (https://weblate.framasoft.org/projects/lufi/development/)
+	- Add config API endpoint (#183)
 
 0.04.6 2019-11-07
 	- Now can send large files (>2Gio) while using a DB other than SQLite (#165)
